# azure-lz-terraform-modules

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  main.tf  variables.tf
.cursor/: README.md
.github/: CODEOWNERS  copilot-instructions.md
alz/: README.md  convert-policies.sh  main.tf  outputs.tf  process-template.sh  variables.tf
alz_avm_platform/: README.md  locals.tf  main.tf  outputs.tf  terraform.tf  variables.tf
azure-caf-es-pbmm/: README.md  main.tf  variables.tf
azure_ad_groups/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
azure_adx/: README.md  main.tf  output.tf  outputs.tf  provider.tf  variables.tf  versions.tf
azure_express_route/: README.md  backend.tf  express_route_circuit_peering.tf  express_route_connection.tf  locals.tf  main.tf  outputs.tf  provider.tf  variables-expressRoute-circuit-peering.tf  variables-expressRoute-circuit.tf  variables-expressRoute-connection.tf  variables.tf
azure_firewall/: README.md
azure_identity/: README.md
azure_ip_group/: README.md  locals.tf  main.tf  provider.tf  variables.ip_group.tf
azure_key_vault/: README.md
azure_logic_app/: README.md  logic-app-code-view.json
azure_monitor_baseline_alerts/: README.md  data.tf  locals.tf  main.tf  provider.tf  variables.amba.tf
azure_policy_lens/: README.maintenance-ai.md  README.md
azure_vwan/: README.md
caf_cccs_medium/: .gitignore  README.md  custom.private.dns.zones.tf  firewall.base.policy.tf  firewall.lz.ipgroups.tf  ipam.tf  main.tf  (+21 more)
scripts/rbac-report/: .gitignore  README.md  main.py  pyproject.toml
(+1417 files in other folders)
