[project]
name = "azure-rbac-report"
version = "0.1.0"
description = "Script to generate reports of direct user role assignments in Azure"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "azure-identity>=1.12.0",
    "azure-mgmt-authorization>=3.0.0",
    "azure-mgmt-managementgroups>=1.0.0",
    "azure-mgmt-resource>=21.1.0",
    "msgraph-sdk>=1.0.0"
]

[project.scripts]
rbac-report = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."] 